Updated footer responsiveness issue

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="email details">
                 <i class="fas fa-envelope"></i>
                 <div class="topic">Email</div>
-                <div class="text-one">buttobuds@gmail.com</div>
+                <div class="text-one">buttonbuds@gmail.com</div>
               </div>
             </div>
             <div class="right-side">
@@ -188,8 +188,7 @@
     <section class="footer">
       <div class="footer-row">
         <div class="footer-col">
-          <h4>Info</h4>
-          <ul class="links">
+                 <ul class="links">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Customers</a></li>
             <li><a href="#">Service</a></li>
@@ -204,13 +203,10 @@
             of new launch , updates and leakes
           </p>
           <form action="#">
-            <input type="text" placeholder="Your email" required>
+            <input type="text" placeholder="Your email">
             <button type="submit">SUBSCRIBE</button>
           </form>
-          <div class="icons">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-          </div>
+         
         </div>
       </div>
     </section>    
