--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Earbuds Promo </title>
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/main.scss">
   </head>
   <body>
     <h1 class="hidden">Earbuds Promo Website</h1>
