--- a/index.html
+++ b/index.html
@@ -177,6 +177,33 @@
       <br>
       <br>
       <hr>
+<section class="ar">
+  
+  <model-viewer src="img/new-earbuds-vr.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="img/poster.webp" shadow-intensity="0.13" id="model">
+    <button class="Hotspot" slot="hotspot-1" data-position="-0.05434979064629092m 1.0998804210993554m -0.4596175598493193m" data-normal="0.2871723758813642m 0.04227909265041228m -0.9569454032782176m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation" id="hotspot-1"> </div>
+    </button><button class="Hotspot" slot="hotspot-2" data-position="0.7478354129843566m 0.8000798645096974m 0.09814370580125509m" data-normal="0.7268434127023778m -0.3280010678585195m 0.6034185553120088m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation" id="hotspot-2"></div>
+    </button><button class="Hotspot" slot="hotspot-3" data-position="-0.21904711173905955m 0.6065564363647588m 0.21185071741530642m" data-normal="-0.28453320946239513m 0.06191891322051577m 0.9566644662046454m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation" id="hotspot-3"></div>
+    </button><button class="Hotspot" slot="hotspot-4" data-position="-0.1336476914129116m 1.8041493422335817m 0.30974617826801426m" data-normal="0.5605549375625068m -0.06984089931273796m 0.8251668987286644m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation" id="hotspot-4"></div>
+    </button><button class="Hotspot" slot="hotspot-5" data-position="-0.280194821063669m 1.1556748091664213m 1.069031095599068m" data-normal="0.39019813150548993m 0.3445105251078175m 0.8538488837373743m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation" id="hotspot-5"></div>
+    </button>
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="img/ar_hand_prompt.png">
+    </div>
+  </model-viewer>
+
+</section>
+
       <!-- 
       <footer class="grid-con">
         <h2 class="hidden">Website Footer</h2>
@@ -185,7 +212,7 @@
         </div>
       </footer> -->
     </section>
-
+<!--
     <section class="footer">
       <div class="footer-row">
         <div class="footer-col">
@@ -210,6 +237,9 @@
          
         </div>
       </div>
-    </section>    
+    </section> 
+  -->
+    <script src="./js/main.js"></script> 
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.2.0/model-viewer.min.js"></script>
   </body>
 </html>
